fix(import): Fix jira import input on firefox

--- a/app/modules/projects/create/import/import-project.scss
+++ b/app/modules/projects/create/import/import-project.scss
@@ -49,6 +49,9 @@
         margin-top: .5rem;
     }
     &-input {
+        border: 1px solid $color-gray400;
+        border-radius: 2px;
+        box-sizing: border-box;
         height: 1.75rem;
         vertical-align: middle;
     }
